# p_bot_cloud

./: .gitignore  .gitmodules  AGENTS.md  README.md  _test.py  activator.py  app.py  backup.sh  event_types.py  mirai_compat.py  nap_cat_types.py  napcat_adapter.py  plugin.py  pyproject.toml  regex_emoji.py  requirements.txt  startup.ps1  utilities.py
docs/: napcat-ws-migration-plan.md
plugins/: achv.py  admin.py  ai_ext.py  auto_purge.py  bank.py  bat.py  bili.py  check_in.py  code_highlight.py  compensation.py  console.py  events.py  festival.py  fur.py  goods.py  gpt.py  help.py  known_groups.py  live.py  man.py  meow.py  mini.py  mora.py  music.py_  nap_cat.py  recall_scheduler.py  renderer.py  rest.py  restaurant.py  reward.py  stem.py  stock.py  sweepstake.py  test.py  throttle.py  tic_tac_toe.py  voucher.py  web_share.py
